# Discord-AI-Chatbot

./: .gitignore  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
.cursor/rules/: ask.mdc  general.mdc
src/: constants.py  logging_config.py  main.py
src/adapters/discord_bot/: bot.py  data.py  discord_service.py
src/adapters/discord_bot/cogs/: text_cog.py
src/adapters/discord_bot/tests/: discord_mocks.py  test_discord.py
src/behaviour/: README.md  behaviour_service.py
src/behaviour/turn_control/: turn_control.py  turn_control_model.py
src/core/: README.md  abstract_service.py  bus.py  events.py
src/llm/: config.json  llm_service.py  memory_model_config.json  personality_model_config.json
src/llm/agent/: graph.py  huggingface_model.py  llm_factory.py  prompts.py  states.py  utils.py
src/llm/agent/memory/: __init__.py  memory.py
